prusti-tests/tests/verify/ui/forall_verify.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/forall_verify.rs:18:11
   |
18 | #[ensures(forall(|x: i32| identity(x) == x + 1))]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/forall_verify.rs:19:1
   |
19 | fn test3() {}
   | ^^^^^^^^^^^^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/forall_verify.rs:28:11
   |
28 | #[ensures(exists(|x: i32| identity(x) == x + 1))]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/forall_verify.rs:29:1
   |
29 | fn test6() {}
   | ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

